--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -10,9 +10,13 @@
 @import 'stari';
 @import 'stari-single';
 @import 'recomandation';
+@import 'resources';
+@import 'story';
+@import 'single';
 @import './components/header.scss';
 @import './components/footer.scss';
 @import './components/stateSlider.scss';
 @import './components/videoSlider.scss';
 @import './components/pageTitle.scss';
 @import './components/pagination.scss';
+@import './components/popup.scss';
