--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -214,6 +214,13 @@
             }
         }
     }
+    .story-popup {
+        padding: 30px;
+        .story-form {
+            margin-top: 20px;
+            grid-gap: 30px 20px;
+        }
+    }
 }
 
 @media (max-width: $md4+px) {
@@ -268,6 +275,19 @@
             }
         }
     }
+    .story-popup {
+        padding: 40px 30px;
+        .story-form {
+            label {
+                grid-column: 2 span;
+            }
+            button {
+                width: 100%;
+                grid-column: 2 span;
+                margin: 0 auto;
+            }
+        }
+    }
 }
 @media (max-width: $md5+px) {
     .hero-section {
@@ -306,6 +326,9 @@
                 order: 2;
             }
         }
+    }
+    .story-popup {
+        padding: 30px 15px;
     }
 }
 
