--- a/#src/scss/specialisti.scss
+++ b/#src/scss/specialisti.scss
@@ -15,130 +15,130 @@
     margin-bottom: 250px;
     @include adaptiv-value('margin-top', 60, 30, 1);
     @include adaptiv-value('margin-bottom', 250, 50, 1);
-    &-body {
-        max-width: 1110px;
-        margin: 0 auto;
-        &__item {
-            display: flex;
-            align-items: center;
-            background: #ffffff;
-            box-shadow: 0px 25px 55px rgba(0, 0, 0, 0.07);
-            border-radius: 20px;
+}
+.articles {
+    max-width: 1110px;
+    margin: 0 auto;
+    &-body__item {
+        display: flex;
+        align-items: center;
+        background: #ffffff;
+        box-shadow: 0px 25px 55px rgba(0, 0, 0, 0.07);
+        border-radius: 20px;
+        @media (max-width: $md2+px) {
+            flex-direction: column;
+        }
+        @media (max-width: $md5+px) {
+            text-align: center;
+        }
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+        &:last-child {
+            margin-bottom: 90px;
+            @include adaptiv-value('margin-bottom', 90, 50, 1);
+        }
+        img {
+            width: 420px;
+            height: 100%;
+            object-fit: cover;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
             @media (max-width: $md2+px) {
-                flex-direction: column;
+                width: 100%;
+                height: 350px;
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+            }
+        }
+        .articles-item__content {
+            padding: 0 30px;
+            @media (max-width: $md2+px) {
+                padding: 30px;
             }
             @media (max-width: $md5+px) {
-                text-align: center;
+                padding: 15px;
             }
-            &:not(:last-child) {
+            h6 {
+                margin-bottom: 15px;
+            }
+            p {
+                font-size: 14px;
+                color: $graycolor;
+                margin-bottom: 20px;
+            }
+            .articles-item__contacts {
                 margin-bottom: 30px;
-            }
-            &:last-child {
-                margin-bottom: 90px;
-                @include adaptiv-value('margin-bottom', 90, 50, 1);
-            }
-            img {
-                width: 420px;
-                height: 100%;
-                object-fit: cover;
-                border-top-left-radius: 20px;
-                border-bottom-left-radius: 20px;
-                @media (max-width: $md2+px) {
-                    width: 100%;
-                    height: 350px;
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                }
-            }
-            .specialisti-item__content {
-                padding: 0 30px;
-                @media (max-width: $md2+px) {
-                    padding: 30px;
+                @media (max-width: $md4+px) {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 15px;
                 }
                 @media (max-width: $md5+px) {
-                    padding: 15px;
+                    align-items: center;
                 }
-                h6 {
-                    margin-bottom: 15px;
-                }
-                p {
-                    font-size: 14px;
-                    color: $graycolor;
-                    margin-bottom: 20px;
-                }
-                .specialisti-item__contacts {
-                    margin-bottom: 30px;
+                address {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 18px;
                     @media (max-width: $md4+px) {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 15px;
+                        margin-bottom: 0;
+                        flex-wrap: wrap;
                     }
                     @media (max-width: $md5+px) {
-                        align-items: center;
+                        justify-content: center;
                     }
-                    address {
-                        display: flex;
-                        align-items: center;
-                        margin-bottom: 18px;
+                    span {
+                        font-size: 20px;
+                        margin-right: 10px;
+                    }
+                    strong {
+                        font-weight: 600;
+                    }
+                    font-style: normal;
+                    font-size: 14px;
+                    color: $darkgreen;
+                }
+                a {
+                    font-size: 14px;
+                    color: $darkgreen;
+                    &:not(:last-child) {
+                        margin-right: 40px;
                         @media (max-width: $md4+px) {
-                            margin-bottom: 0;
-                            flex-wrap: wrap;
+                            margin-right: 0;
                         }
-                        @media (max-width: $md5+px) {
-                            justify-content: center;
-                        }
-                        span {
-                            font-size: 20px;
-                            margin-right: 10px;
-                        }
-                        strong {
-                            font-weight: 600;
-                        }
-                        font-style: normal;
-                        font-size: 14px;
+                    }
+                    span {
+                        font-size: 20px;
+                        margin-right: 10px;
+                        color: $darkgreen;
+                        display: inline-block;
+                        transform: translateY(4px);
+                    }
+                    strong {
+                        font-weight: 600;
                         color: $darkgreen;
                     }
-                    a {
-                        font-size: 14px;
-                        color: $darkgreen;
-                        &:not(:last-child) {
-                            margin-right: 40px;
-                            @media (max-width: $md4+px) {
-                                margin-right: 0;
-                            }
-                        }
+                    &.contacts-phone {
+                        color: $accentcolor;
+                    }
+                    &.contacts-media {
+                        color: #3f64ad;
                         span {
-                            font-size: 20px;
-                            margin-right: 10px;
-                            color: $darkgreen;
-                            display: inline-block;
-                            transform: translateY(4px);
-                        }
-                        strong {
-                            font-weight: 600;
-                            color: $darkgreen;
-                        }
-                        &.contacts-phone {
-                            color: $accentcolor;
-                        }
-                        &.contacts-media {
-                            color: #3f64ad;
-                            span {
-                                &::before {
-                                    color: #3f64ad;
-                                }
+                            &::before {
+                                color: #3f64ad;
                             }
                         }
                     }
                 }
-                .specialisti-item__view {
-                    width: 200px;
-                    @media (max-width: $md2+px) {
-                        width: 250px;
-                    }
-                    @media (max-width: $md5+px) {
-                        width: 100%;
-                    }
+            }
+            .articles-item__view {
+                width: 200px;
+                @media (max-width: $md2+px) {
+                    width: 250px;
+                }
+                @media (max-width: $md5+px) {
+                    width: 100%;
                 }
             }
         }
