--- a/#src/components/videoSlider.html
+++ b/#src/components/videoSlider.html
@@ -3,34 +3,42 @@
         <div class="video-slider__slider">
             <div class="slider-video__body swiper">
                 <div class="slider-video__slide">
-                    <a data-fslightbox="gallery" href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" style="background: url('../img/video1.jpg') 50% 50% / cover no-repeat;">
+                    <a data-fslightbox="gallery"
+                        href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                        style="background: url('../img/video1.jpg') 50% 50% / cover no-repeat;">
                         <svg width="55" height="55" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white"/>
-                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B"/>
+                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white" />
+                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B" />
                         </svg>
                     </a>
                 </div>
                 <div class="slider-video__slide">
-                    <a data-fslightbox="gallery" href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" style="background: url('../img/video2.jpg') 50% 50% / cover no-repeat;">
+                    <a data-fslightbox="gallery"
+                        href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                        style="background: url('../img/video2.jpg') 50% 50% / cover no-repeat;">
                         <svg width="55" height="55" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white"/>
-                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B"/>
+                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white" />
+                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B" />
                         </svg>
                     </a>
                 </div>
                 <div class="slider-video__slide">
-                    <a data-fslightbox="gallery" href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" style="background: url('../img/video1.jpg') 50% 50% / cover no-repeat;">
+                    <a data-fslightbox="gallery"
+                        href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                        style="background: url('../img/video1.jpg') 50% 50% / cover no-repeat;">
                         <svg width="55" height="55" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white"/>
-                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B"/>
+                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white" />
+                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B" />
                         </svg>
                     </a>
                 </div>
                 <div class="slider-video__slide">
-                    <a data-fslightbox="gallery" href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" style="background: url('../img/video2.jpg') 50% 50% / cover no-repeat;">
+                    <a data-fslightbox="gallery"
+                        href="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                        style="background: url('../img/video2.jpg') 50% 50% / cover no-repeat;">
                         <svg width="55" height="55" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white"/>
-                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B"/>
+                            <circle cx="40" cy="40" r="39.5" fill="white" stroke="white" />
+                            <path d="M36 33V47L47 40L36 33Z" fill="#49745B" />
                         </svg>
                     </a>
                 </div>
@@ -41,14 +49,18 @@
                 <div class="slider-video-controls__arrows slider-arrows">
                     <button type="button" class="slider-arrow slider-arrow__prev">
                         <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle r="24.5" transform="matrix(-1 0 0 1 25 25)" fill="white" stroke="#CCDEDB"/>
-                            <path d="M27.8416 28.825L24.0249 25L27.8416 21.175L26.6666 20L21.6666 25L26.6666 30L27.8416 28.825Z" fill="#294133"/>
+                            <circle r="24.5" transform="matrix(-1 0 0 1 25 25)" fill="white" stroke="#CCDEDB" />
+                            <path
+                                d="M27.8416 28.825L24.0249 25L27.8416 21.175L26.6666 20L21.6666 25L26.6666 30L27.8416 28.825Z"
+                                fill="#294133" />
                         </svg>
                     </button>
                     <button type="button" class="slider-arrow slider-arrow__next">
                         <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="25" cy="25" r="24.5" fill="white" stroke="#CCDEDB"/>
-                            <path d="M22.1584 28.825L25.9751 25L22.1584 21.175L23.3334 20L28.3334 25L23.3334 30L22.1584 28.825Z" fill="#294133"/>
+                            <circle cx="25" cy="25" r="24.5" fill="white" stroke="#CCDEDB" />
+                            <path
+                                d="M22.1584 28.825L25.9751 25L22.1584 21.175L23.3334 20L28.3334 25L23.3334 30L22.1584 28.825Z"
+                                fill="#294133" />
                         </svg>
                     </button>
                 </div>
