--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -169,6 +169,9 @@ form button {
 }
 
 .slider-controls__dots {
+    display: flex;
+    align-items: center;
+    gap: 10px;
     .swiper-pagination-bullet {
         width: 12px;
         height: 12px;
